Initial commit from the clone of https://github.com/rtzll/flask-todolist project and creation of the secondarie docker to run the test

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,16 @@
 services:
+
+  test:
+    image: todolist
+    build:
+      context: .
+    env_file:
+      - .env
+    command: >
+      sh -c "python -m unittest discover -s tests"
+    depends_on:
+      - todolist
+
   todolist:
     container_name: todolist
     image: todolist
